adding security part (api-key)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Server Port
 server.port=8083
+
+# API Token Configuration
+api.token=your-secret-api-token-here
